--- a/src/main/resources/templates/user/myInfo.html
+++ b/src/main/resources/templates/user/myInfo.html
@@ -37,9 +37,13 @@
                             <input type="radio" class="form-check-input" id="ROLE_ADMIN" name="role" value="ROLE_ADMIN" th:checked="${user.role == 'ROLE_ADMIN'}" disabled>
                             <label class="form-check-label" for="ROLE_ADMIN">admin</label>
                         </div>
-                        <div class="form-check">
+                        <div class="form-check" style="margin-right: 20px;">
                             <input type="radio" class="form-check-input" id="ROLE_USER" name="role" value="ROLE_USER" th:checked="${user.role == 'ROLE_USER'}" disabled>
                             <label class="form-check-label" for="ROLE_USER">user</label>
+                        </div>
+                        <div class="form-check">
+                            <input type="radio" class="form-check-input" id="ROLE_SUPER" name="role" value="ROLE_SUPER" th:checked="${user.role == 'ROLE_SUPER'}" disabled>
+                            <label class="form-check-label" for="ROLE_SUPER">SUPER</label>
                         </div>
                     </div>
                 </div>
