--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,7 +25,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
                         <li><a class="dropdown-item" href="/bbs/1">QNA</a></li>
                         <li><a class="dropdown-item" href="#">FAQ</a></li>
-                        <li><a class="dropdown-item" href="#">NOTICE</a></li>
+                        <li><a class="dropdown-item" href="/bbs/33">NOTICE</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
