--- a/src/main/resources/templates/bbs/notice/view.html
+++ b/src/main/resources/templates/bbs/notice/view.html
@@ -20,9 +20,10 @@
                     <h3 th:text="|${type.postName}|"></h3>
                 </div>
                 <div class="text-end">
-                    <button type="button" class="btn btn-info" id="list-btn">목록</button>
+                    <button type="button" class="btn btn-outline-info" id="list-btn">목록</button>
                     <th:block sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_SUPER')">
-                        <button type="button" class="btn btn-secondary" id="edit-btn">수정</button>
+                        <button type="button" class="btn btn-outline-secondary" id="edit-btn">수정</button>
+                        <button type="button" class="btn btn-outline-danger" id="delete-btn">삭제</button>
                     </th:block>
                 </div>
             </div>
@@ -110,6 +111,27 @@
                     console.log("error : ", error)
                 })
         }
+
+        $("#delete-btn").on("click", function(e) {
+            console.log("delete-btn clicked...")
+            const result = confirm("삭제 하시겠습니까?")
+            if(result) {
+                $.ajax({
+                    type: "DELETE",
+                    url: `/api/post/${post['id']}`,
+                    success: function (response) {
+                        if (response['httpStatus'] === 200) {
+                            alert("답변이 삭제되었습니다.")
+                            window.location.href = `/bbs/${post['typeId']}`
+                        }
+                    },
+                    error: function (error) {
+                        // Handle the error response
+                        console.error("upload error:", error);
+                    }
+                });
+            }
+        })
 
         $("#list-btn").on("click", function(e){
             window.location.href = `/bbs/${post['typeId']}`
