--- a/src/main/resources/templates/bbs/qna/view.html
+++ b/src/main/resources/templates/bbs/qna/view.html
@@ -20,8 +20,9 @@
                     <h3 th:text="|${type.postName}|"></h3>
                 </div>
                 <div class="text-end">
-                    <button type="button" class="btn btn-info" id="list-btn">목록</button>
-                    <button type="button" class="btn btn-secondary" id="edit-btn">수정</button>
+                    <button type="button" class="btn btn-outline-info" id="list-btn">목록</button>
+                    <button type="button" class="btn btn-outline-secondary" id="edit-btn">수정</button>
+                    <button type="button" class="btn btn-outline-danger" id="delete-btn">삭제</button>
                 </div>
             </div>
         </div>
@@ -59,9 +60,7 @@
                         <h5>답변</h5>
                     </div>
                     <div class="text-end">
-                        <th:block sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_SUPER')">
-                            <button type="button" class="btn btn-outline-primary" id="show-modalAnswer">답변 작성하기</button>
-                        </th:block>
+                        <button type="button" class="btn btn-outline-primary" id="show-modalAnswer">답변 작성하기</button>
                     </div>
                 </div>
 
@@ -158,7 +157,6 @@
 
         let answerId = null;
         const post = /*[[${post}]]*/ {}
-        console.log("user : ", [[${user}]])
 
         $(document).ready(function(){
             feather.replace()
@@ -245,6 +243,28 @@
                     console.log("error : ", error)
                 })
         }
+
+        $("#delete-btn").on("click", function(e) {
+            console.log("delete-btn clicked...")
+
+            const result = confirm("삭제 하시겠습니까?")
+            if(result) {
+                $.ajax({
+                    type: "DELETE",
+                    url: `/api/post/${post['id']}`,
+                    success: function (response) {
+                        if (response['httpStatus'] === 200) {
+                            alert("답변이 삭제되었습니다.")
+                            window.location.href = `/bbs/${post['typeId']}`
+                        }
+                    },
+                    error: function (error) {
+                        // Handle the error response
+                        console.error("upload error:", error);
+                    }
+                });
+            }
+        })
 
         $("#list-btn").on("click", function(e){
             window.location.href = `/bbs/${post['typeId']}`
