commit61 - 답변여부 -> 답변

--- a/src/main/resources/templates/bbs/qna/index.html
+++ b/src/main/resources/templates/bbs/qna/index.html
@@ -28,7 +28,7 @@
                         <th style="width: 30%">제목</th>
                         <th style="width: 10%" class="text-center">첨부파일</th>
                         <th style="width: 10%" class="text-center">조회수</th>
-                        <th style="width: 10%" class="text-center">답변여부</th>
+                        <th style="width: 10%" class="text-center">답변</th>
                     </tr>
                 </thead>
                 <tbody id="qna-tbody"></tbody>
