--- a/src/main/resources/templates/bbs/notice/view.html
+++ b/src/main/resources/templates/bbs/notice/view.html
@@ -121,7 +121,7 @@
                     url: `/api/post/${post['id']}`,
                     success: function (response) {
                         if (response['httpStatus'] === 200) {
-                            alert("답변이 삭제되었습니다.")
+                            alert("게시글이 삭제되었습니다.")
                             window.location.href = `/bbs/${post['typeId']}`
                         }
                     },
