commit64 - home 화면 이동

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,6 +5,11 @@
     </div>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
+            <div class="dropdown">
+                <button class="btn" type="button" id="mainPageBtn" onclick="location.href='/'">
+                    <img src="/assets/src/home.png" alt="Button Image" style="width:40px;" class="rounded-pill">
+                </button>
+            </div>
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="productDropdown" role="button" data-bs-toggle="dropdown"
