--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -17,7 +17,13 @@
     </div>
     <th:block th:replace="fragments/footer :: footer"></th:block>
     <th:block th:replace="fragments/script :: script"></th:block>
-    <th:block layout:fragment="script"></th:block>
+    <th:block layout:fragment="script">
+    </th:block>
+<script th:inline="javascript">
+    $(document).ready(function(e) {
+        feather.replace()
+    })
+</script>
 </body>
 
 
