--- a/src/main/resources/templates/user/myInfo.html
+++ b/src/main/resources/templates/user/myInfo.html
@@ -9,7 +9,7 @@
 
 <th:block layout:fragment="content">
     <div class="container-sm mt-3">
-        <div class="card-body">
+        <div class="card-body" style="width: 50%; display: flex; justify-content: center; align-items: center;">
             <form id="update-form" class="needs-validation" novalidate>
                 <input type="hidden" name="userId" th:value="${user.userId}" />
                 <div class="mb-3 mt-3">
@@ -23,11 +23,13 @@
                         <input type="password" class="form-control" id="newPassword" name="password" disabled/>
                         <button class="btn btn-outline-dark" type="button" id="change-pwd">비밀번호 변경</button>
                     </div>
+                    <div class="invalid-feedback">비밀번호를 입력하세요.</div>
                 </div>
 
                 <div class="mb-3 mt-3">
                     <label for="newPassword">비밀번호 확인</label>
                     <input type="password" class="form-control" id="newPasswordChk" disabled/>
+                    <div class="invalid-feedback">비밀번호가 일치하지 않습니다.</div>
                 </div>
 
                 <div class="mb-3 mt-3">
@@ -78,54 +80,71 @@
     <script>
 
         let changePwd = false
+        const newPassword = $("#newPassword")
+        const newPasswordChk = $("#newPasswordChk")
 
-      $("#change-pwd").on("click", function(e) {
-          e.preventDefault();
-          changePwd = true
-          $("#newPassword").prop("disabled", false);
-          $("#newPasswordChk").prop("disabled", false);
-      })
+        $(document).ready(function() {
+            newPassword.on('input', chckValidate)
+            newPasswordChk.on('input', chckValidate)
+        })
 
-      window.addEventListener("load", function(event) {
-         event.preventDefault();
-         const form = document.getElementById("update-form");
+        function chckValidate(){
+            const passwordVal = newPassword.val()
+            const passwordChkVal = newPasswordChk.val()
 
-         form.addEventListener("submit", function(event) {
-             if(form.checkValidity() === false) {
-                 event.preventDefault();
-                 form.classList.add("was-validated")
-             }else{
-                 event.preventDefault();
-                 const pwd = $("#newPassword").val()
-                 const pwdChk = $("#newPasswordChk").val()
+            if(passwordVal && passwordChkVal) {
+                if(passwordVal === passwordChkVal) newPasswordChk.removeClass('is-invalid')
+                else newPasswordChk.addClass('is-invalid')
+            }
+        }
 
-                 if(changePwd &&(pwd.length === 0 || pwd !== pwdChk)) alert("입력하신 비밀번호가 다릅니다.")
-                 else {
-                     FormDataToObj.getParameter("update-form").then(obj => {
+        $("#change-pwd").on("click", function(e) {
+            e.preventDefault();
+            changePwd = true
+            $("#newPassword").prop("disabled", false);
+            $("#newPasswordChk").prop("disabled", false);
+        })
 
-                         $.ajax({
-                           type: 'PUT',
-                           url: `/api/user`,
-                           dataType: 'json',
-                           data: JSON.stringify(obj),
-                           contentType: 'application/json',
-                           success: function (data) {
-                               if(data.httpStatus === 200) {
-                                   alert("회원정보를 수정하였습니다.")
-                                   window.location.href='/'
-                               }else {
-                                   alert("회원정보 수정을 실패했습니다.")
-                               }
-                           },
-                           error: function (xhr, status, error) {
-                             console.error('Error getting password:', error);
-                           }
-                         });
-                     })
+        window.addEventListener("load", function(event) {
+            event.preventDefault();
+            const form = document.getElementById("update-form");
+
+            form.addEventListener("submit", function(event) {
+                if(form.checkValidity() === false) {
+                    event.preventDefault();
+                    form.classList.add("was-validated")
+                }else{
+                    event.preventDefault();
+                    const pwd = newPassword.val()
+                    const pwdChk = newPasswordChk.val()
+
+                    if(changePwd &&(pwd.length === 0 || pwd !== pwdChk)) alert("입력하신 비밀번호가 다릅니다.")
+                    else {
+                        FormDataToObj.getParameter("update-form").then(obj => {
+
+                            $.ajax({
+                              type: 'PUT',
+                              url: `/api/user`,
+                              dataType: 'json',
+                              data: JSON.stringify(obj),
+                              contentType: 'application/json',
+                              success: function (data) {
+                                  if(data.httpStatus === 200) {
+                                      alert("회원정보를 수정하였습니다.")
+                                      window.location.href='/'
+                                  }else {
+                                      alert("회원정보 수정을 실패했습니다.")
+                                  }
+                              },
+                              error: function (xhr, status, error) {
+                                console.error('Error getting password:', error);
+                              }
+                            });
+                        })
+                    }
                 }
-             }
-         });
-      });
+            });
+        });
     </script>
 </th:block>
 
