commit67 - 상품 카테고리 관리 화면 추가(수정중)

--- a/src/main/resources/templates/user/myInfo.html
+++ b/src/main/resources/templates/user/myInfo.html
@@ -9,7 +9,7 @@
 
 <th:block layout:fragment="content">
     <div class="container-sm mt-3">
-        <div class="card-body" style="width: 50%; display: flex; justify-content: center; align-items: center;">
+            <div class="card-body" style="width: 50%;">
             <form id="update-form" class="needs-validation" novalidate>
                 <input type="hidden" name="userId" th:value="${user.userId}" />
                 <div class="mb-3 mt-3">
