commit72 - 주문관리 화면 구현

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -55,7 +55,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
                             <li><a class="dropdown-item" href="/category">카테고리 및 상품 관리</a></li>
-                            <li><a class="dropdown-item" href="#">주문 관리</a></li>
+                            <li><a class="dropdown-item" href="/order">주문 관리</a></li>
                             <li><a class="dropdown-item" href="#">업로드 파일 관리</a></li>
                         </ul>
                     </li>
